# TrabalhoIIA2

./: CMakeLists.txt  Experiencias.xlsx  Relatorio_TP2_IIA.docx  TP2_IIA_2526.txt  algoritmo.c  algoritmo.h  algoritmo2.c  algoritmo2.h  algoritmo3.c  algoritmo3.h  funcao.c  funcao.h  main.c  utils.c  utils.h
.cache/clangd/index/: algoritmo.c.2A26BF09D46E51FD.idx  algoritmo.h.F30B4CAA0FEF379D.idx  funcao.c.BEC3A2045EA9086B.idx  funcao.h.45100E23EF54298A.idx  main.c.B89F7A8EB7991EC8.idx  utils.c.5C586C850D70DCE9.idx  utils.h.64D2286E349D0C08.idx
